# ecr-insights

./: Cargo.toml  README.md
src/: main.rs
